# euler

./: .gitignore  README.md  pyproject.toml
euler/: d1_id1.py  id12_d5.py  id15_d5.py  id16_d5.py  id18_d5.py  id21_d5.ipynb  id22_d5.ipynb  id23_d5.ipynb  id24_d5.ipynb  id25.ipynb  id26_d5.ipynb  id27_d5.ipynb  id28_d5.ipynb  id29_d5.ipynb  id2_d5.py  id30_d5.ipynb  id31_d5.ipynb  id32_d5.ipynb  id3_d5.py  id4_d5.py  id504_d15.ipynb  id549_d15.ipynb  id587_d20.ipynb  id5_d5.py  id62_d15.ipynb  id68_d25.ipynb  id6_d5.py  id7_d5.py  id81_d10.ipynb  id82_d10.ipynb  id82_d20.ipynb  id8_d5.py  id99_d10.ipynb  id9_d5.py  notes.ipynb  template.ipynb  template.py
euler/old/: id10_d5.py  id11_d5.py  id13_d5.py  id14_d5.py  id1_d5.py  id20_d5.py  id7_d5.py
