[tool.poetry]
name = "euler"
version = "0.1.0"
description = ""
authors = ["MaeglynD <maeglyn.davies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"
ipympl = "^0.9.3"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

